service-restriction-example/loadbalancer-service-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httptestpod
  namespace: test
  labels:
    app: httptest
spec:
  containers:
  - image: nginx:alpine
    name: myengine
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httptest
  name: httptest
  namespace: test
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: LoadBalancer
  selector:
    app: httptest
